fixed mosip logo alignment issue in get personalised card

--- a/resident-ui/src/app/feature/uinservices/personalisedcard/personalisedcard.component.css
+++ b/resident-ui/src/app/feature/uinservices/personalisedcard/personalisedcard.component.css
@@ -70,6 +70,13 @@ table.fixed td {
     padding-left: 1.25rem;
 }
 
+.image-icon-ara{
+    float: left !important;
+}
+.image-icon{
+    float: right !important;
+}
+
 button[disabled=disabled], button:disabled {
     color:#505050 !important;
 }
